<resources>
    <string name="app_name">SmartLandServey</string>
    <string name="add">Add Farm</string>
    <string name="google_maps_key">AIzaSyC8wvdZtwX85FRpLrMC_c7Lq0fqovnBUMw</string>
    <string name="title_activity_add_farm">Survey Map</string>
    <string name="enter_farm_details">Enter Land Details</string>
    <string name="save">SAVE</string>
    <string name="name">Enter Owner Name</string>
    <string name="mobile">Enter Mobile Number</string>
    <string name="surveyno">Enter survey no</string>
    <string name="locality_name">Enter Area Name</string>
    <string name="date">Enter Date</string>
    <string name="title_activity_maps">Map</string>


</resources>
