<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:text="@string/enter_farm_details"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/colorPrimaryDark"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/farmName"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/MobileNumber"
        android:layout_height="wrap_content"
        android:hint="@string/mobile"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/surveyno"
        android:layout_height="wrap_content"
        android:hint="@string/surveyno"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/area"
        android:layout_height="wrap_content"
        android:hint="@string/locality_name"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/date"
        android:layout_height="wrap_content"
        android:hint="@string/date"/>
    <Button
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:id="@+id/saveData"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_height="wrap_content" />
</LinearLayout>
